--- a/trabalhoP3/compilador/a.vm
+++ b/trabalhoP3/compilador/a.vm
@@ -1,14 +1,12 @@
 start
-jump fimfun0
-foo:
-nop
 pushi 0
-pushl -1
-pushl -2
-add
-storel 0
-pushl 0
-storel -3
-return
-fimfun0:
+read
+atoi
+storeg 0
+pushi 0
+pushi 0
+storeg 1
+pushi 0
+pushi 0
+storeg 2
 stop
