--- a/trabalhoP3/compilador/a.vm
+++ b/trabalhoP3/compilador/a.vm
@@ -1,6 +1,4 @@
 start
-pushs "Escreva o número de elementos do array:\n"
-writes
 pushi 0
 read
 atoi
@@ -11,50 +9,39 @@ storeg 1
 pushi 0
 pushi 0
 storeg 2
-pushi 0
-pushi 0
-storeg 3
 pushg 0
-pushi 0
-equal
-pushi 0
-equal
-jz fimse0
-read
-atoi
 storeg 3
-pushi 1
-storeg 1
 enq0:
 pushg 1
 pushg 0
 inf
 jz fimenq0
+pushg 1
 read
 atoi
-storeg 2
-pushg 3
-pushg 2
-sup
-jz fimse1
-pushg 2
-storeg 3
-fimse1:
 pushg 1
 pushi 1
 add
 storeg 1
 jump enq0
 fimenq0:
-pushs "O menor número foi o "
-writes
-pushg 3
+enq1:
+pushg 1
+pushi 0
+sup
+jz fimenq1
+pushg 1
+pushi 1
+sub
+storeg 2
+pushg 2
 writei
 pushs "\n"
 writes
-jump fimse2
-fimse0:
-pushs "Não leu nenhum número\n"
-writes
-fimse2:
+pushg 1
+pushi 1
+sub
+storeg 1
+jump enq1
+fimenq1:
 stop
