--- a/trabalhoP3/compilador/a.vm
+++ b/trabalhoP3/compilador/a.vm
@@ -1,6 +1,14 @@
 start
-pushi 0
-pushi 1
-storeg 0
-pushi 0
+pushf 0.100000
+pushf 0.200000
+finf
+ftoi
+jz fimse0
+pushs "OH YEAH!"
+writes
+jump fimse1
+fimse0:
+pushs "OH NO!"
+writes
+fimse1:
 stop
